--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@ value="female">Female
 <br>
 </br>
 <button>CREATE PASSWORD:</button>
-<input type= "TEXT">
+<input type= "password">
 <br>
 </br>
 <button>COMFIRM PASSWORD:</button>
-<input type= "TEXT">
+<input type= "password">
 <HR>
 </HR>
 <HR>
